docs: improve api documentation (#70)
